# eqvio

./: .gitignore  .gitmodules  CMakeLists.txt  EQVIO_config_template.yaml  README.md  intrinsics.yaml  intrinsics_example.yaml
configs/: EQVIO_config_EuRoC_stationary.yaml  EQVIO_config_UZHFPV.yaml  EQVIO_results_EuRoC_stationary.yaml  EQVIO_results_UZHFPV.yaml
docs/: main.md
include/eqvio/: EqFMatrices.h  Geometry.h  IMUVelocity.h  LoopTimer.h  VIOFilter.h  VIOFilterSettings.h  VIOGroup.h  VIOSimulator.h  VIOState.h  VIOVisualiser.h  VIOWriter.h  VisionMeasurement.h  aofstream.h
include/eqvio/common/: aofstream.h
include/eqvio/csv/: CSVFile.h  CSVLine.h  CSVReader.h
include/eqvio/dataserver/: APDatasetReader.h  ASLDatasetReader.h  DataServerBase.h  DatasetReaderBase.h  HiltiDatasetReader.h  RosbagDatasetReader.h  SimpleDataServer.h  SimulationDataServer.h  ThreadedDataServer.h  UZHFPVDatasetReader.h  dataservers.h
include/eqvio/mathematical/: EqFMatrices.h  Geometry.h  VIOGroup.h  VIOState.h  VIO_eqf.h  VisionMeasurement.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/: LieYaml.h  common.h
libs/visualisation/: CMakeLists.txt
libs/visualisation/include/: PlotDataTypes.h  Plotter.h
libs/visualisation/src/: Plotter.cpp  main.cpp
scripts/: DatasetInfo.py  analyse_timing_data.py  analysis_tools.py  euroc_sequences.yaml  run_and_analyse_dataset.py  summarise_results.py
src/: EqFMatrices.cpp  Geometry.cpp  IMUVelocity.cpp  LoopTimer.cpp  VIOFilter.cpp  VIOGroup.cpp  VIOSimulator.cpp  VIOState.cpp  VIOVisualiser.cpp  VIOWriter.cpp  VisionMeasurement.cpp  main_opt.cpp  main_sim.cpp
src/coordinateSuite/: euclid.cpp  invdepth.cpp  normal.cpp
src/dataserver/: APDatasetReader.cpp  ASLDatasetReader.cpp  DataServerBase.cpp  HiltiDatasetReader.cpp  RosbagDatasetReader.cpp  SimpleDataServer.cpp  SimulationDataServer.cpp  ThreadedDataServer.cpp  UZHFPVDatasetReader.cpp
src/mathematical/: EqFMatrices.cpp  Geometry.cpp  IMUVelocity.cpp  VIOGroup.cpp  VIOState.cpp  VIO_eqf.cpp  VisionMeasurement.cpp
src/mathematical/coordinateSuite/: euclid.cpp  invdepth.cpp  normal.cpp
test/: CMakeLists.txt  test_CSVReader.cpp  test_CoordinateCharts.cpp  test_EqFMatrices.cpp  test_FilterStatistics.cpp  test_VIOGroup.cpp  test_VIOGroupActions.cpp  test_VIOLift.cpp  test_settings.cpp  testing_utilities.cpp  testing_utilities.h
